# beetroots

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  LICENSE  README.md  biblio_my_publi.bib  job_run_one_file.slurm  pyproject.toml  requirements.txt  run_multiple_jobs_for_loop.sh
beetroots/approx_optim/: abstract_approx_optim.py  approx_optim_grid_old.py  nn_bo.py  nn_bo_orionbar.py  nn_bo_real_data.py  nn_bo_toycase.py
beetroots/approx_optim/approach_type/: abstract_approach_type.py  bo.py  grid_search.py  utils.py
beetroots/approx_optim/forward_map/: abstract_forward_map.py  nn.py  poly_reg.py
beetroots/entropy/: my_entropy_estimators.py
beetroots/inversion/plots/: map_shaper.py  plots_2d.py  plots_2d_setup.py  plots_estimator.py  readable_line_names.py
beetroots/inversion/reporting/: report_astro.py
beetroots/inversion/results/: abstract_results.py  results_mcmc.py  results_mcmc_hierarchical.py  results_optim_map.py  results_optim_mle.py
beetroots/inversion/run/: abstract_run.py  run_mcmc.py  run_optim_map.py  run_optim_mle.py
beetroots/modelling/: __init__.py  posterior.py
beetroots/modelling/forward_maps/: abstract_base.py  abstract_exp.py  basic_exp.py  identity.py  neural_network_approx.py  regression_poly.py
beetroots/modelling/likelihoods/: abstract_likelihood.py  approx_censored_add_mult.py  gaussian.py  gaussian_censored.py  log_normal.py  log_normal_censored.py  utils.py
beetroots/sampler/: __init__.py  abstract_sampler.py  entropy_sampler.py  hierarchical_sampler.py  my_sampler.py
beetroots/simulations/: abstract_simulation.py  astro_entropy.py  data_validation.py  hierarchical_abstract_simulation_old.py
beetroots/space_transform/: __init__.py  abstract_transform.py  id_transform.py  transform.py
data/carina/: README.md  carina_fts_lines_err_v4_full.pkl  carina_fts_lines_int_v4_full.pkl  full_to_fit.ipynb  input_params_1p5p4_PAH_no_spatial_regu.yaml  input_params_1p5p4_PAH_with_spatial_regu.yaml  input_params_1p7_no_spatial_regu.yaml  input_params_1p7_with_spatial_regu.yaml  input_params_1p7_with_spatial_regu_optim_mle.yaml  params_for_gaussian_only.csv  values_wu_et_al_2018.pkl
data/horsehead/: README.md  full_to_fit.ipynb  horsehead-err.pkl  horsehead-int.pkl  horsehead_10per_with_spatial_regu_lines12345678.yaml  horsehead_45per_with_spatial_regu_lines12345678.yaml  horsehead_45per_with_spatial_regu_lines_all_co.yaml  horsehead_45per_with_spatial_regu_lines_all_co_fixed_angle.yaml  horsehead_45per_with_spatial_regu_lines_all_co_fixed_angle_low_regu.yaml  params_for_gaussian_only.csv
data/models/: test.ipynb
data/ngc7023/: Nebula_NGC_7023_Err.pkl  Nebula_NGC_7023_Int.pkl  README.txt  best_params.csv  best_params_wrong_units.csv  full_to_fit.ipynb  input_nn_bo.yaml  input_nn_bo_fast.yaml  input_params.yaml  input_params_gpu.yaml  params_for_gaussian_only.csv
data/omc1/: README.md  best_params.csv  full_to_fit.ipynb  full_to_orionbar.ipynb  input_params_45per_with_spatial_regu_lines1234.yaml  input_params_45per_with_spatial_regu_lines1234_fixed_AV_angle.yaml  input_params_45per_with_spatial_regu_lines1234_fixed_angle.yaml  input_params_45per_with_spatial_regu_lines1234_fixed_angle_optim_mle.yaml  input_params_8per_with_spatial_regu_lines1234.yaml  omc1-err-cgs.pkl  omc1-int-cgs.pkl  params_for_gaussian_only.csv  positions_of_points_of_interest.ipynb
data/orionbar/: OrionBar_Joblin_Err.pkl  OrionBar_Joblin_Int.pkl  README.txt  best_params.csv  best_params_wrong_units.csv  full_to_fit.ipynb  input_params.yaml  input_params_nochp10.yaml  params_for_gaussian_only.csv
data/toycases/: README.md  article_obs_N10_map_withjump_reg1e1.yaml  astro_toy_N10.pkl  astro_toy_N100.pkl  astro_toy_N27.pkl  astro_toy_N30.pkl  astro_toy_N64.pkl  astro_toy_N90.pkl  best_params.csv  best_params_old.csv  gretsi-long-sampling.yaml  gretsi-short-sampling.yaml  input_nn_bo.yaml  input_params_nn_direct_N10_fixed_angle.yaml  input_params_nn_direct_N30_fixed_angle.yaml  input_params_nn_direct_N64_fixed_angle.yaml  input_params_nn_direct_N90_fixed_angle.yaml  nn_N100_fixed_angle.yaml  nn_N10_fixed_AV.yaml  nn_N10_fixed_AV_angle.yaml  nn_N10_fixed_angle.yaml  nn_N10_fixed_angle_optim.yaml  nn_N30_fixed_angle.yaml  nn_N64_fixed_angle.yaml  nn_N90_fixed_angle.yaml  params_for_gaussian_only.csv  polyreg_N10_fixed_angle.yaml
docs/: application-carina-astro.rst  application-ngc7023-astro.rst  application-toycase-astro.rst  beetroots.approx_optim.approach_type.rst  beetroots.approx_optim.forward_map.rst  beetroots.approx_optim.rst  beetroots.entropy.rst  beetroots.inversion.plots.rst  beetroots.inversion.reporting.rst  beetroots.inversion.results.rst  beetroots.inversion.results.utils.mc_utils.rst  beetroots.inversion.results.utils.rst  beetroots.inversion.rst  beetroots.inversion.run.rst  beetroots.modelling.forward_maps.rst  beetroots.modelling.likelihoods.rst  beetroots.modelling.priors.rst  beetroots.modelling.rst  beetroots.rst  beetroots.sampler.rst  beetroots.sampler.saver.rst  beetroots.sampler.utils.rst  beetroots.simulations.astro.forward_map.rst  beetroots.simulations.astro.observation.rst  beetroots.simulations.astro.posterior_type.rst  beetroots.simulations.astro.real_data.rst  beetroots.simulations.astro.rst  beetroots.simulations.astro.toy_case.rst  beetroots.simulations.other_applications.rst  beetroots.simulations.rst  beetroots.space_transform.rst  biblio.bib  conf.py  create_input_files.nblink  create_input_files.rst  gallery-examples.rst  gaussian-mixture.rst  index.rst  likelihood-params-adjustment.rst  modules.rst  (+7 more)
examples/: create_input_files.ipynb  sensor_loc_pb_definition.ipynb  visualize_maps.ipynb
examples/gaussian_mixture/: README.md  gaussian_mixture_likelihood.py  gaussian_mixture_simu.py
examples/ngc7023/: ngc7023_nn.py
examples/sensor_loc/: README.md  sensor_loc_forward.py  sensor_loc_likelihood.py  sensor_loc_simu.py
examples/timeseries/: timeseries_toy_case.py  timeseries_toy_case_mle.py
notebooks/: trials.ipynb
tests/sampler/: test_mysampler.py
tests/space_transform/: test_id_transform.py  test_transform.py
(+134 files in other folders)
